--- a/v1.0 - 1/css/main.css
+++ b/v1.0 - 1/css/main.css
@@ -57,6 +57,37 @@ a{
   color:#E65C42;
 }
 
+
+
+#banner img{
+  width: 100%;
+  max-height: 20%;
+}
+
+.footer{
+display:flex;
+flex-wrap: wrap;
+margin-left: 30%;
+}
+
+#footer-ionfo,#qr{
+  flex-grow: 1;
+  flex-basis: 50%;
+
+}
+
+#cr{
+  flex-grow: 1;
+  flex-basis: 100%;
+  text-align: center;
+}
+
+#qr img{
+  margin-left: 10em;
+  width: 100px;
+  height: 100px;
+}
+
 /*
   TEXT ELEMENTS -------------------
 */
@@ -117,9 +148,10 @@ cite {
 }
 
 .nav-main{
+  background: #fff;
   display: inline-block;
   width: 19%;
-  font-size: 1em;
+  font-size: 1.25em;
   text-decoration: none;
   text-align: center;
 }
@@ -184,6 +216,49 @@ input{
    border: 1px solid #ccc;
 }
 
+.dropbtn{
+  text-decoration: none;
+  background: #fff;
+  color:#E65C42;
+  font-family: "Univers";
+  font-weight: bold;
+  font-style: normal;
+}
+
+.dropbtn:hover, .dropbtn:focus  {
+  background:#E65C42;
+  color: #FFF;
+}
+
+.dropdown-content a {
+    float: none;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: center;
+}
+
+#about:hover #aboutsub{
+    display: block;
+}
+
+#find:hover #findsub{
+    display: block;
+}
+
+.dropdown-content a:hover {
+    background-color:#E65C42;
+  color: #FFF;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    width:18%;
+    background: #fff;
+    z-index: 1;
+}
+
 
 /*
   COMBINED ELEMENTS -------------------
@@ -204,7 +279,43 @@ input{
     margin-left: 30%;
   }
 
+  
 
+  .box img{
+    margin: 5%;
+    max-width: 50%;
+    
+  }
+
+ .box figcaption{
+    margin-left: 25%;
+    text-align: left;
+  }
+
+  #sales1,#sales2,#sales3 {
+    flex-grow: 1;
+    flex-basis: 100%;
+    margin-left: 25%;
+  }
+
+  #listing1,#listing2,#listing3,#listing4,#listing5,#listing6{
+  margin-left: 25%;
+}
+.footer{
+    margin-left: 15%;
+  }
+
+}
+
+@media (max-width: 70em){
+  #listing1,#listing2,#listing3,#listing4,#listing5,#listing6{
+    flex-grow: 1;
+    flex-basis: 50%;
+  } 
+
+  .footer{
+    margin-left: 25%;
+  }
 }
 
 /*  margin-bottom: -0.5em;
@@ -221,15 +332,34 @@ input{
 }
 */
 
+#topsales h2{
+  text-align: center;
+}
+
 .box{
 display:flex;
 flex-wrap: wrap;
 }
 
-.Prod-list1  .Prod-list2  .Prod-list3 {
-  flex-grow: 1;
-  width: 300px;
+.box img{
+  margin: 10%;
+  width: 80%;
+  max-height: 20%;
+}
 
+#sales1,#sales2,#sales3{
+  flex-grow: 1;
+  width: 30%;
+
+}
+
+#hotlisting h2{
+  text-align: center;
+}
+
+#listing1,#listing2,#listing3,#listing4,#listing5,#listing6{
+  flex-grow: 1;
+  width: 30%;
 }
 
 /*.Prod-list2{
