--- a/v1.0 - 1/css/main.css
+++ b/v1.0 - 1/css/main.css
@@ -39,9 +39,9 @@ a {
 	width: 4em;
 	height: 2em;
   	color: #FFF;
-  	background-color: #15dbb8;
+  	background-color:  #E65C42;
   	border: 0.1em solid;
-  	border-color: #fff;
+  	border-color:  #E65C42;
   	border-radius: 0.25em;
   	text-decoration: none;
   	-webkit-transition: background-color 0.5s ease-out;
@@ -50,16 +50,22 @@ a {
 
 #header4 button:hover {
   background-color:#FFF;
-  color: #15dbb8;
+  color: #E65C42;
 }
 
-.dropdown-content{
+#dropdown-content{
 	display:none;
 }
 
-#header4 button:hover {
-  background-color:#FFF;
-  color: #15dbb8;
+#dropdown-content2{
+	position: absolute;
+	display:none;
+	padding-top: 1em;
+	background: rgba(32, 57, 89,0.8);
+}
+
+#drop-menu:hover #dropdown-content2{
+		display:block;
 }
 
 #header1{
@@ -132,7 +138,27 @@ input{
   padding: 0.5em 0.75em;
 }
 
-.dropdown-content a {
+#header5{
+	width: 60%;
+	margin-left: auto;
+	margin-right: auto;
+	display: flex;
+	padding-bottom: 1em;
+}
+
+#header5 .nav{
+	width: 25%;
+}
+
+#header5 a{
+	color:#fff;
+}
+
+#header5 a:hover {
+  	color: #E65C42;
+}
+
+#dropdown-content a {
     float: none;
     font-size: 0.75em;
     padding: 2px 5px;
@@ -143,7 +169,22 @@ input{
     text-align: left;
 }
 
-.dropdown-content a:hover {
+#dropdown-content a:hover {
+  	color: #E65C42;
+}
+
+#dropdown-content2 a {
+    float: none;
+    font-size: 0.85em;
+    padding: 5px 10px;
+    margin: auto 0px;
+    color: #fff;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+
+#dropdown-content2 a:hover {
   	color: #E65C42;
 }
 
@@ -387,44 +428,47 @@ margin-bottom: 0.5em;
 color: #5c5c5c;
 }
 
-.largeview {
-	width: 60%;
-	margin-left: auto;
-	margin-right: auto;
+h3{
+	text-align: center;
+	color: #5c5c5c;
 	margin-top: 2em;
-	margin-bottom: 3em;
 }
 
-.largeview img{
+#image-show{
 	width: 100%;
-	height: 15em;
-	}
-
-#image1,#image2,#image3,#image4{
-	display: none;
-}
-
-#smallview label{
-  font-size: 1em;
-  text-align: center;
-  padding: 0.5em;
-  margin: 0.2em;
-  background: #E65C42;
-  color:#fff;
-  display: block;
-  position: relative;
-}
-
-#switch96 img,#switch97 img,#switch98 img,#switch99 img{
-	width: 15em;
-	height: 15em;
-}
-
-
-
-#switch96:checked #image1{
+    background-color: #cccccc;
+    background-image: linear-gradient(#203959,#fcfcfc);
+	padding-top: 1em;
+	padding-bottom: 2em;
 	display: block;
 }
+
+#imagecont{
+	width: 80%;
+	text-align: center;
+	margin-left: auto;
+	margin-right: auto;
+	padding-top: 2em;
+	background-color: rgba(0,0,0,0.1);
+}
+
+#large{
+	width: 60%;
+	height:auto;
+	max-height: 20em;
+	object-fit: contain;
+	background-color: #fcfcfc;
+	padding: 0.5em;
+}
+
+#small img{
+	width: 5em;
+	height: 5em;
+	object-fit: contain;
+	margin:2em 1em;
+	background-color: #fcfcfc;
+}
+
 
 #detail-info {
 	width: 80%;
@@ -476,6 +520,9 @@ width: 100%;
 		margin-right: auto;
 
 	}
+	#header5{
+	width: 80%;
+}
 
 	#header td{
 		padding:0.3em 1em;
@@ -506,7 +553,7 @@ width: 100%;
 		margin-right: auto;
 	}
 
-	#header2,#header3{
+	#header2,#header3,#header5{
 		display: none;
 	}
 
@@ -517,9 +564,11 @@ width: 100%;
 		top: 5px;
 	}
 
-	#header4:hover .dropdown-content{
+	#header4:hover #dropdown-content{
 		display:block;
 	}
+
+
 
 	.more{
 		width:50%;
