--- a/v1.0 - 1/css/main.css
+++ b/v1.0 - 1/css/main.css
@@ -1,6 +1,6 @@
 body {
   min-width: 20em;
-  font-family: sans-serif;
+  font-family: 'Fjalla One', sans-serif;
   padding: 0px;
   margin:0px;
 }
@@ -69,16 +69,21 @@ a {
 }
 
 #header1{
-	width:20%;
+	width:15%;
 }
 
 #header2{
+	color:#E65C42;
+	font-size: 2em;
 	width:50%;
+	margin-top: 1em;
+	vertical-align: top;
+	text-align: left;
 }
 
 #header3{
 	width:25%;
-	margin-top: 1em;
+	margin-top: 5em;
 	vertical-align: top;
 }
 
@@ -139,19 +144,20 @@ input{
 }
 
 #header5{
-	width: 60%;
+	width: 45%;
 	margin-left: auto;
-	margin-right: auto;
+	margin-right: 9%;
 	display: flex;
 	padding-bottom: 1em;
 }
 
 #header5 .nav{
-	width: 25%;
+	margin: 0em 1em;
 }
 
 #header5 a{
 	color:#fff;
+	font-size: 1.2em;
 }
 
 #header5 a:hover {
@@ -175,7 +181,7 @@ input{
 
 #dropdown-content2 a {
     float: none;
-    font-size: 0.85em;
+    font-size: 1.2em;
     padding: 5px 10px;
     margin: auto 0px;
     color: #fff;
@@ -188,9 +194,29 @@ input{
   	color: #E65C42;
 }
 
+#banner{
+	text-align: center;
+}
+
 #banner img{
   width: 100%;
   max-height: 25em;
+}
+
+#link{
+	display: block;
+	text-align: center;
+	background-color: rgba(255,255,255,0.6);
+	position: absolute;
+	margin-top: -5em;
+	font-size: 2em;
+	color: #E65C42;
+	padding: 1em;
+}
+
+#link:hover{
+
+background-color: rgba(255,255,255,0.8);
 }
 
 .box{
@@ -199,6 +225,10 @@ input{
   	margin-top: 1em;
 	margin-left: auto;
 	margin-right: auto;
+}
+
+#salest{
+	width: 60%;
 }
 
 h2{
@@ -430,8 +460,18 @@ color: #5c5c5c;
 
 h3{
 	text-align: center;
-	color: #5c5c5c;
+	color: #E65C42;
 	margin-top: 2em;
+}
+
+#buy{
+	width: 60%;
+	margin-top:2em;
+	margin-bottom: 3em;
+	margin-left: auto;
+	margin-right: auto;
+	border: 0.1em solid;
+	border: 0.1em solid #E65C42;
 }
 
 #image-show{
@@ -521,7 +561,17 @@ width: 100%;
 
 	}
 	#header5{
-	width: 80%;
+	width: 70%;
+	margin-left: 25%;
+	margin-right: auto;
+}
+
+#header5 a{
+	font-size: 1em;
+}
+
+#dropdown-content2 a{
+font-size: 1em;
 }
 
 	#header td{
