--- a/v1.0 - 1/css/main.css
+++ b/v1.0 - 1/css/main.css
@@ -1,5 +1,5 @@
 body {
-  min-width: 20em;
+  min-width: 28em;
   font-family: 'Fjalla One', sans-serif;
   padding: 0px;
   margin:0px;
@@ -36,7 +36,7 @@ a {
 }
 
 #header4 button{
-	width: 4em;
+	width: 5em;
 	height: 2em;
   	color: #FFF;
   	background-color:  #E65C42;
@@ -200,6 +200,8 @@ input{
 
 #banner img{
   width: 100%;
+  height:auto;
+  object-fit: cover;
   max-height: 25em;
 }
 
@@ -220,7 +222,7 @@ background-color: rgba(255,255,255,0.8);
 }
 
 .box{
-	width:80%;
+	width:70%;
 	text-align: center;
   	margin-top: 1em;
 	margin-left: auto;
@@ -247,13 +249,23 @@ h2{
 	margin-bottom: 2em;
 	}
 
-.sales,.listing,.location{
+.sales,.listing{
 	display: inline-block;
+	width: 28%;
+	margin: 0em 2%;
+}
+
+.location{
+	display: inline-block;
+	width: 20%;
+	margin: 0em 2%;
 }
 
 #topsales img, #hotlisting img,#map img{
 	width:15em;
 	height:15em;
+	object-fit: contain;
+	background-color: #f9f9f9;
 	text-align: center;
 }
 
@@ -263,7 +275,7 @@ figcaption{
 }
 
 .more{
-	width:20%;
+	width:30%;
 	margin-top: 2em;
 	margin-bottom: 4em;
 	margin-left: auto;
@@ -301,6 +313,15 @@ figcaption{
 	margin-left: auto;
 	margin-right: auto;
 	border-bottom: 0.05em solid #5c5c5c;
+}
+.menu1{
+	display: block;
+	width: 100%;
+}
+
+.menu2{
+	display: none;
+	width: 100%;
 }
 
 #footer table{
@@ -345,6 +366,12 @@ figcaption{
 
 .infor{
   text-align: center;
+}
+.infor p{
+	width:70%;
+	text-align: left;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 .location a{
@@ -521,7 +548,13 @@ h3{
 #detail-info table{
 width: 100%;
 }
-
+@media(max-width: 90em){
+.location{
+	display: inline-block;
+	width: 28%;
+	margin: 0em 2%;
+}
+}
 @media (max-width: 82em) {
 
 	#headercont{
@@ -537,7 +570,11 @@ width: 100%;
 	margin-right: auto;
 }
 
-	#header1,#header2,#header3{
+	#header1,#header2{
+		display: inline-block;
+	}
+
+	#header3{
 		display: block;
 	}
 
@@ -549,15 +586,16 @@ width: 100%;
 
 	#header2{
 		width:60%;
-		margin-top: 1em;
+		margin-top: -1em;
 		margin-left: auto;
 		margin-right: auto;
 	}
 
 	#header3{
-		width:50%;
+		width:60%;
 		margin-left: auto;
 		margin-right: auto;
+		margin-top: 1em;
 
 	}
 	#header5{
@@ -587,13 +625,25 @@ font-size: 1em;
 	margin-bottom: 3em;
 }
 
-
-
+.sales,.listing{
+	display: inline-block;
+	width: 45%;
+	margin: 0em 2%;
 }
 
 
 
-@media (max-width: 45em) {
+}
+@media(max-width: 70em){
+.location{
+	display: inline-block;
+	width: 45%;
+	margin: 0em 2%;
+}
+}
+
+
+@media (max-width:50em) {
 
 	#headercont{
 		width: 20em;
@@ -601,6 +651,9 @@ font-size: 1em;
 		padding-bottom: 3em;
 		margin-left: auto;
 		margin-right: auto;
+	}
+	#header1{
+		display: block;
 	}
 
 	#header2,#header3,#header5{
@@ -610,9 +663,15 @@ font-size: 1em;
 	#header4{
 		display: block;
 		position: absolute;
-		left: 5px;
-		top: 5px;
+		left: 1em;
+		top: 1em;
 	}
+
+#header4 button{
+	font-weight: bold;
+	font-size: 1em;
+}
+
 
 	#header4:hover #dropdown-content{
 		display:block;
@@ -623,26 +682,12 @@ font-size: 1em;
 	.more{
 		width:50%;
 	}
-
-
-	#footercont{
-		width: 30em;
-		margin-left: auto;
-		margin-right: auto;
+	.menu1{
+		display: none;
 	}
-
-	#footer th{
-		font-size: 1em;
-	}
-	#footer td{
-		font-size: 0.75em;
-	padding:0em;
-	}
-
-	#footer th{
-	padding:0em;
-	font-size: 0.75em;
-	}
+.menu2{
+	display: block;
+}
 
 	#filter select{
 		width: 80%;
@@ -659,6 +704,12 @@ font-size: 1em;
 	margin-top: 1.5em;
 	margin-bottom: 3em;
 
+}
+
+.sales,.listing{
+	display: inline-block;
+	width: 90%;
+	margin: 0em 2%;
 }
 
 .property-card{
@@ -696,4 +747,11 @@ label {
 	font-size: 0.75em;
 }
 
+}
+
+@media(max-width: 45em){
+.location{
+	display: inline-block;
+	width: 90%;
+	margin: 0em 2%;
 }
